tests/NormalTests/paczka1/fuzzy1/94853767.err
Error in line 1: 9vdub S47 25,9
Error in line 8: GVkXrnVP3V S209 76,9
Error in line 11: w1xnseH S47 75,7
Error in line 14: w1xnseH S209 15,8
Error in line 19: 9vdub A325 35,1
